[tool.poetry]
name = "feed-cleaner"
version = "0.1.0"
description = "Clean Up Your Feed — bot network investigation tool"
authors = []
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
rapidfuzz = "^3.10.0"
python-dotenv = "^1.0.0"
twscrape = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
